Overflow fix

--- a/src/assets/styles/Message.scss
+++ b/src/assets/styles/Message.scss
@@ -18,8 +18,6 @@
     }
 
     .message-values {
-        display: flex;
-        flex-direction: column;
 
         .message-values-text {
             font-size: $font_medium;
